# pjsekai-bot

./: .breakpoints  .travis.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml
